# Perception

./: CMakeLists.txt  package.xml
ImageProc/: CMakeLists.txt  package.xml
ImageProc/config/: ConfigVision.lua
ImageProc/include/: DarknetDetection.h  Detector.h  ImageProc.h  ImageProcNode.h  VisionOptions.h  darknet.h
ImageProc/src/: DarknetDetection.cc  ImageProc.cc  ImageProcNode.cc  ImageProcNodeMain.cc
config/: ConfigPerception.lua
include/: DarknetDetection.h  DarknetDetector.h  Detector.h  ImageProc.h  ImageProcNode.h  Observation.h  PerceptionNode.h  PerceptionOptions.h  VisionOptions.h  tf_bridge.h  time_conversion.h
launch/: ImageProcNode.launch  PerceptionNode.launch
src/: DarknetDetection.cc  DarknetDetector.cc  ImageProc.cc  ImageProcNode.cc  ImageProcNodeMain.cc  Observation.cc  PerceptionNode.cc  PerceptionNodeMain.cc  tf_bridge.cc  time_conversion.cc
urdf/: ikid.urdf
