<?xml version="1.0"?>
<package format="2">
  <name>PerceptionNode</name>
  <version>0.1.0</version>
  <description>The PerceptionNode package</description>

  <maintainer email="b51live@gmail.com">b51</maintainer>

  <license>MIT</license>

  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>GoogleDeps</build_depend>
  <build_depend>Shm</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>Shm</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!--
  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
  </export>
  -->
</package>
